[workspace]
members = [
    "xcrypt",
    "xcrypt-sys",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/nikstur/libcxcrypt-rs"
repository = "https://github.com/nikstur/libcxcrypt-rs"
readme = "README.md"
keywords = [ "hashing", "password", "phf", "libxcrypt", "crypt" ]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
missing_errors_doc = { level = "allow" }
