[package]
name = "xcrypt-sys"
description = "Low-level bindings for libxcrypt"
version = "0.2.0"
readme = "README.md"
links = "crypt"
categories = [ "authentication", "cryptography", "external-ffi-bindings" ]
keywords.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[build-dependencies]
bindgen = "0.70.1"
