[package]
name = "xcrypt"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Bindings for libxcrypt"
homepage = "https://github.com/nikstur/libcxcrypt-rs"
repository = "https://github.com/nikstur/libcxcrypt-rs"
readme = "README.md"

[dependencies]
xcrypt-sys = { path = "../xcrypt-sys" }

[lints]
workspace = true
