[package]
name = "xcrypt"
description = "Bindings for libxcrypt"
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
xcrypt-sys = { path = "../xcrypt-sys" }

[lints]
workspace = true
