[package]
name = "xcrypt"
description = "Bindings for libxcrypt"
version = "0.3.2"
categories = ["authentication", "cryptography", "api-bindings"]
keywords.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
xcrypt-sys = { version = "0.2.0", path = "../xcrypt-sys" }

[lints]
workspace = true
